Fixing z-index for the main header.

--- a/src/scss/grommet-core/_objects.header.scss
+++ b/src/scss/grommet-core/_objects.header.scss
@@ -85,7 +85,7 @@
         top: 0px;
         left: 0px;
         right: 0px;
-        z-index: 1;
+        z-index: 3;
       }
     }
   }
